Add test and refactor

--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "local-homepage",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Homeserver webpage",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node start.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jqnxyz/local-homepage.git"
   },
   "author": "Zen Quah",
-  "license": "ISC",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/Jqnxyz/local-homepage/issues"
   },
   "homepage": "https://github.com/Jqnxyz/local-homepage#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "supertest": "^6.1.6"
   }
 }
